--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -46,13 +46,23 @@ div {text-align:justify}
     background-color:#FFF;
     border: white;
 }
-
+.f {
+    display: inline-block;
+    width: 1em;
+}
+.n {
+    text-align: center;
+    border-bottom: 1px solid black; 
+}
+.d {
+    text-align: center;
+}
 </style>
 
 <div>
 {{  content  }}
 </div>
 
-<!--- Special characters: 𝜖 𝚿 𝜓 𝜀 ∀ ≠ ℝ Ω → --->
+<!--- Special characters: 𝜖 𝚿 𝜓 𝜀 ∀ ≠ ℝ Ω → λ ⋀ --->
 <!--- Combining characters: ̃   ̂  ̇   --->
 </html>
