--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -63,6 +63,6 @@ div {text-align:justify}
 {{  content  }}
 </div>
 
-<!--- Special characters: θ 𝜖 ℝ 𝚿 𝜓 𝜀 ∀ ≠ Ω → λ ⋀ 𝛼 τ --->
+<!--- Special characters: θ 𝜖 ℝ 𝚿 𝜓 𝜀 ∀ ≠ Ω → λ ⋀ 𝛼 τ ɪ --->
 <!--- Combining characters: ̃   ̂  ̇   --->
 </html>
