--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -92,7 +92,7 @@ summatory:after {
 blockquote {
     border-style:solid;
     border-width:1px 0 1px 20px;
-    border-image:url(http://opbokken.nu/meuk/curly.png) 1 20 stretch;
+    border-image:url(https://opbokken.nu/meuk/curly.png) 1 20 stretch;
     padding-left:0.5em;
 }
 span{
